--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 </head>
 <body>
 
-<h1>Web Extractor</h1>
+<h1>ChatApp</h1>
 <p>Author: Diya Patel</p>
-<p>Last Update: 24 April, 2021 Sprint 7</p>
+<p>Last Update: 2 April, 2021 Sprint 8</p>
 
 <h3>Description:</h3>
-<p1>A tool that gathers data from a website. It will parse data publish the data as a text. There will be a window where the user can enter a URL and press the button. When the button will be pressed,
-    the application will read the URL and the the data will be displayed. The user will have a option to exit the program by clicking exit button. </p1>
+<p1> This is a GUI based ChatApp that usees network programming to connect server and the client under same network. It will use Java Sockets to handle 
+    network connections. Using sockets,a chat server will be created between one server and a client.   </p1>
 
 <h3>Non-Prioritized List of Features:  </h3>
-<li>Fetch data from multiple pages</li>
-<li>Displaying data that is more visually appealing</li>
-<li>Addiing more buttons with more functions</li>
+<li>GUI for server side</li>
+<li>Adding More buttons on chat window</li>
+<li>Make it work for one server, and many clients</li>
 
 
 <h3>Language : Java </h3>
@@ -25,7 +25,11 @@
 <h3>Technical Features that Demonstartes Things Learned in Class</h3>
 <li>Graphical User Interface</li>
 <li>Features of Object Oriented Programming: Inheritance, Encapsulation, Abstraction, Polymorphism</li>
-<li>Storing data in an ArrayList</li>
+<li>Event Handling</li>
+
+<h3>The technical features being implemented that go beyond what we learned in class</h3>
+<li>Using Sockets for client-server application </li>
 
 </body>
 </html>
+
